在 Linux 环境下进行编译时, 能够将分支名称和版本号都编译进去

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,5 @@ configure.in text eol=lf
 Makefile text eol=lf
 Makefile.in text eol=lf
 *.sh text eol=lf
+*.m4 text eol=lf
+**/autotools text eol=lf
