--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -43,6 +43,7 @@ char_server_port: 3306
 char_server_id: ragnarok
 char_server_pw: ragnarok
 char_server_db: ragnarok
+char_codepage:
 
 // MySQL Map Server
 map_server_ip: 127.0.0.1
@@ -50,6 +51,7 @@ map_server_port: 3306
 map_server_id: ragnarok
 map_server_pw: ragnarok
 map_server_db: ragnarok
+map_codepage:
 
 // MySQL Log Database
 log_db_ip: 127.0.0.1
