调整数据库连接配置, 重写编码自动判定策略 (#174)
* 程序启动时若指定了源码的版本号和分支, 那么也一起打印出来
* 清理官方读取 inter_athena.conf 中读取全局数据库配置的代码
* 重新整理 inter_athena.conf 中对各个 codepage 选项的定义
* 清理代码, 重写数据库编码自动判定规则

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -21,10 +21,6 @@ party_share_level: 15
 // "Can't connect to local MySQL server through socket '/tmp/mysql.sock' (2)"
 // and you have localhost, switch it to 127.0.0.1
 
-// Global SQL settings
-// overridden by local settings when the hostname is defined there
-// (currently only the login-server reads/obeys these settings)
-
 // MySQL Login server
 login_server_ip: 127.0.0.1
 login_server_port: 3306
@@ -47,6 +43,7 @@ char_server_port: 3306
 char_server_id: ragnarok
 char_server_pw: ragnarok
 char_server_db: ragnarok
+char_codepage:
 
 // MySQL Map Server
 map_server_ip: 127.0.0.1
@@ -54,6 +51,7 @@ map_server_port: 3306
 map_server_id: ragnarok
 map_server_pw: ragnarok
 map_server_db: ragnarok
+map_codepage:
 
 // MySQL Log Database
 log_db_ip: 127.0.0.1
