--- a/.gitignore
+++ b/.gitignore
@@ -145,6 +145,17 @@ __pycache__
 /tools/python/cache
 /tools/python/pyhelp.conf
 
+# Boost C++ Libraries
+3rdparty/boost/bin.v2
+3rdparty/boost/libs
+3rdparty/boost/stage
+3rdparty/boost/tools/build/src/engine/*.obj
+3rdparty/boost/tools/build/src/engine/*.pdb
+3rdparty/boost/tools/build/src/engine/*.exe
+3rdparty/boost/b2.exe
+3rdparty/boost/bootstrap.log
+3rdparty/boost/project-config.jam*
+
 # IDE
 .vscode
 
